# rs_addons

./: .gitignore  CMakeLists.txt  README.md  package.xml  rs_learning_Readme.md
cmake/: rs_addons_config.cmake
data/training_acat/: cnnfc7.hdf5  cnnfc7.list  kdtree.idx
descriptors/analysis_engines/: ClassifyOffline.xml  ModelTrainer.xml  classify_offline.xml  dbwriter.xml  model_trainer.xml  my_demo.xml  test_addons.xml  unreal.xml  unrealrobo.xml
descriptors/annotators/: ARMarkersDetector.xml  CaffeClassificationAnnotator.xml  ClassifyOfflineAnnotator.xml  DeCafClassifier.xml  GbAnnotator.xml  KnnAnnotator.xml  RSGBAnnotator.xml  RSKNNAnnotator.xml  RSRFAnnotator.xml  RSSvmAnnotator.xml  RfAnnotator.xml  SimatrackDetection.xml  SvmAnnotator.xml  TrainerAnnotator.xml  classifyOfflineAnnotator.xml  trainerAnnotator.xml
descriptors/typesystem/: all_types.xml
include/rs_addons/: RSClassifier.h  RSGBT.h  RSKNN.h  RSRF.h  RSSVM.h
include/rs_addons/types/: all_types.h  type_definitions.h
src/: ARMarkersDetector.cpp  CaffeClassificationAnnotator.cpp  CaffeProxy.cpp  ClassifyOfflineAnnotator.cpp  DeCafClassifier.cpp  GbAnnotator.cpp  KnnAnnotator.cpp  RSClassifier.cpp  RSGBT.cpp  RSKNN.cpp  RSRF.cpp  RSSVM.cpp  RSSvmAnnotator.cpp  RfAnnotator.cpp  SimtrackDetection.cpp  SvmAnnotator.cpp  TrainerAnnotator.cpp
src/ext/: DbExt.cpp  DbExtA.cpp  DesConcat.cpp  FeatureExtractor.cpp  fExtractor.cpp  featureExtractor.cpp
src/utils/: ExtractFeatsFromCNNLayer.cpp
